<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="on">Turn On</string>
    <string name="off">Turn Off</string>
    <string name="Visible">Get Visible</string>
    <string name="List">List Devices</string>
    <string name="title_activity_bluetooth_testing">BluetoothTesting</string>
    <string name="title_activity_music_streaming">MusicStreaming</string>
   <string name="title_player">MusicPlayer</string>
    <string name="song_list">List</string>
    <string name="empty">Empty</string>
    <string name="text1">Name</string>
    <string name="dialog_message">Share Music with Devices?</string>
    <string name="dialog_title">Bluetooth</string>
    <string name="ok">Share</string>
    <string name="cancel">Continue Playing</string>
</resources>