<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BluetoothTesting" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/button1"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:onClick="on"
                android:text="@string/on" />

            <Button
                android:id="@+id/button5"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:onClick="off"
                android:text="@string/off" />

            <Button
                android:id="@+id/button2"
                android:layout_width="180dp"
                android:layout_height="71dp"
                android:onClick="visible"
                android:text="@string/Visible" />

            <Button
                android:id="@+id/button3"
                android:layout_width="181dp"
                android:layout_height="69dp"
                android:onClick="list"
                android:text="@string/List" />

        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_alignTop="@+id/scrollView1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="263dp"
        android:layout_alignParentBottom="true">

    </ListView>

</RelativeLayout>